brat/test/golden/error/fanout-too-many-overs.brat.golden
Error in test/golden/error/fanout-too-many-overs.brat@FC {start = Pos {line = 2, col = 5}, end = Pos {line = 2, col = 13}}:
f = { [/\] }
    ^^^^^^^^

  Type error: No unders but overs: (head :: Nat) for [/\]

